2010-08-21  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/test*: default to using ../src/cs2cs

2010-07-31  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: updated from GDAL.  Adds TMSO projection definitions,
	and replaces all named datums with fully defined datums.

2010-07-05  Frank Warmerdam  <warmerdam@pobox.com>

	* src/projects.h: I_ERROR macro must set context errno.  

2010-06-10  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*: Preliminary implementation of projCtx multithreading change.

2010-05-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_apply_vgridshift.c (+more): preliminary addition of
	vertical grid shifting support.

2010-03-16  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c, src/pj_init.c, src/projects.h, src/pj_gridlist.c,
	src/pj_apply_gridshit.c: rework the translation of nadgrids parameters
	into a list of gridshift files to avoid use of static "lastnadgrids"
	information which screws up multithreading.  Changes the PJ structure.

	* src/multistresstest.c: new harnass for multithreaded testing.

2010-03-03  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*: fix a variety of warnings when -Wall is used.  Mostly 
	unused variables, and use of assignment results in an if statement
	without extra brackets. 

	* src/*: treat most grid shift errors as not-transient, with the
	exception of not having a grid shift file for the area of interest.
	This is done by adding a new error code for no grid shift file for
	target area.  Also ensure that cs2cs reports pj_transform() errors
	via emess so we have a chance of seeing the error message.
	
2010-02-28  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c, src/pj_transform.c: added support for +axis setting
	to control axis orientation (#18).

	* nad/epsg: Regenerated from EPSG 7.4.1 with the big datum selection
	upgrade.

2010-02-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_omerc.c: wholesale update from libproj4.3 (20081120) (#62)
